Use a standalone version of Nashorn so that we can use more recent versions of the Oracle JDK.